@@ -1,6 +1,6 @@
 /**
- * Appcelerator Titanium Mobile
- * Copyright (c) 2009-2012 by Appcelerator, Inc. All Rights Reserved.
+ * Titanium SDK
+ * Copyright TiDev, Inc. 04/07/2022-Present
  * Licensed under the terms of the Apache Public License
  * Please see the LICENSE included with this distribution for details.
  */
@@ -21,8 +21,7 @@ import android.util.Log;
 /**
  * An extension of HashMap, used to access and store data.
  */
-public class KrollDict
-	extends HashMap<String, Object>
+public class KrollDict extends HashMap<String, Object>
 {
 	private static final String TAG = "KrollDict";
 	private static final long serialVersionUID = 1L;
@@ -30,29 +29,30 @@ public class KrollDict
 
 	/**
 	 * Constructs a KrollDict with a default capacity.
-	 * @module.api
 	 */
-	public KrollDict() {
+	public KrollDict()
+	{
 		this(INITIAL_SIZE);
 	}
 
-	@SuppressWarnings("unchecked")
-	public KrollDict(JSONObject object) throws JSONException {
+	public KrollDict(JSONObject object) throws JSONException
+	{
 		for (Iterator<String> iter = object.keys(); iter.hasNext();) {
 			String key = iter.next();
-			Object value = object.get(key);			
+			Object value = object.get(key);
 			Object json = fromJSON(value);
 			put(key, json);
 		}
 	}
-		
-	public static Object fromJSON(Object value) {
+
+	public static Object fromJSON(Object value)
+	{
 		try {
 			if (value instanceof JSONObject) {
-				return new KrollDict((JSONObject)value);
+				return new KrollDict((JSONObject) value);
 
 			} else if (value instanceof JSONArray) {
-				JSONArray array = (JSONArray)value;
+				JSONArray array = (JSONArray) value;
 				Object[] values = new Object[array.length()];
 				for (int i = 0; i < array.length(); i++) {
 					values[i] = fromJSON(array.get(i));
@@ -61,7 +61,6 @@ public class KrollDict
 
 			} else if (value == JSONObject.NULL) {
 				return null;
-
 			}
 		} catch (JSONException e) {
 			Log.e(TAG, "Error parsing JSON", e);
@@ -73,35 +72,47 @@ public class KrollDict
 	/**
 	 * Constructs a KrollDict by copying an existing Map
 	 * @param map the existing map to copy
-	 * @module.api
 	 */
-	public KrollDict(Map<? extends String, ? extends Object> map) {
+	public KrollDict(Map<? extends String, ? extends Object> map)
+	{
 		super(map);
 	}
 
 	/**
 	 * Constructs a KrollDict with the specified capacity.
 	 * @param size the specified capacity.
-	 * @module.api
 	 */
-	public KrollDict(int size) {
+	public KrollDict(int size)
+	{
 		super(size);
 	}
 
-	public void putCodeAndMessage(int code, String message) {
-		this.put(TiC.PROPERTY_SUCCESS,new Boolean(code==0));
-		this.put(TiC.PROPERTY_CODE,new Integer(code));
-		if (message != null){
-			this.put(TiC.EVENT_PROPERTY_ERROR,message);
+	public void putCodeAndMessage(int code, String message)
+	{
+		this.put(TiC.PROPERTY_SUCCESS, Boolean.valueOf(code == 0));
+		this.put(TiC.PROPERTY_CODE, Integer.valueOf(code));
+		if (message != null) {
+			this.put(TiC.EVENT_PROPERTY_ERROR, message);
 		}
 	}
 
-	public boolean containsKeyAndNotNull(String key) {
+	public Object putIfAbsent(String key, Object value)
+	{
+		Object existingValue = this.get(key);
+		if (existingValue == null) {
+			this.put(key, value);
+		}
+		return existingValue;
+	}
+
+	public boolean containsKeyAndNotNull(String key)
+	{
 		return containsKey(key) && get(key) != null;
 	}
 
-	public boolean containsKeyStartingWith(String keyStartsWith) {
-		if (keySet() != null) { 
+	public boolean containsKeyStartingWith(String keyStartsWith)
+	{
+		if (keySet() != null) {
 			for (String key : keySet()) {
 				if (key.startsWith(keyStartsWith)) {
 					return true;
@@ -110,54 +121,78 @@ public class KrollDict
 		}
 		return false;
 	}
-	
-	public boolean getBoolean(String key) {
+
+	public boolean getBoolean(String key)
+	{
 		return TiConvert.toBoolean(get(key));
 	}
 
-	public boolean optBoolean(String key, boolean defaultValue) {
+	public boolean optBoolean(String key, boolean defaultValue)
+	{
 		boolean result = defaultValue;
 
 		if (containsKey(key)) {
-			result = getBoolean(key);
+			try {
+				result = getBoolean(key);
+			} catch (Exception e) {
+			}
 		}
 		return result;
 	}
 
-	public String getString(String key) {
+	public String getString(String key)
+	{
 		return TiConvert.toString(get(key));
 	}
 
-	public String optString(String key, String defalt) {
+	public String optString(String key, String defaultString)
+	{
+		String result = defaultString;
 		if (containsKey(key)) {
-			return getString(key);
-		}
-		return defalt;
-	}
-
-	public Integer getInt(String key) {
-		return TiConvert.toInt(get(key));
-	}
-
-	public Integer optInt(String key, Integer defaultValue) {
-		Integer result = defaultValue;
-
-		if (containsKey(key)) {
-			result = getInt(key);
+			try {
+				result = getString(key);
+			} catch (Exception e) {
+			}
 		}
 		return result;
 	}
 
-	public Double getDouble(String key) {
+	public Integer getInt(String key)
+	{
+		return TiConvert.toInt(get(key));
+	}
+
+	public Integer optInt(String key, Integer defaultValue)
+	{
+		Integer result = defaultValue;
+
+		if (containsKey(key)) {
+			try {
+				result = getInt(key);
+			} catch (Exception e) {
+			}
+		}
+		return result;
+	}
+
+	public Double getDouble(String key)
+	{
 		return TiConvert.toDouble(get(key));
 	}
 
-	public String[] getStringArray(String key) {
-		return TiConvert.toStringArray((Object[])get(key));
+	public String[] getStringArray(String key)
+	{
+		return TiConvert.toStringArray((Object[]) get(key));
+	}
+
+	public int[] getIntArray(String key)
+	{
+		return TiConvert.toIntArray((Object[]) get(key));
 	}
 
 	@SuppressWarnings("unchecked")
-	public KrollDict getKrollDict(String key) {
+	public KrollDict getKrollDict(String key)
+	{
 		Object value = get(key);
 		if (value instanceof KrollDict) {
 			return (KrollDict) value;
@@ -168,12 +203,32 @@ public class KrollDict
 		}
 	}
 
-	public boolean isNull(String key) {
+	public KrollDict[] getKrollDictArray(String key)
+	{
+		String[] value = getStringArray(key);
+		KrollDict[] result = new KrollDict[value.length];
+		int index = 0;
+		for (String record : value) {
+			KrollDict dictionary = null;
+			try {
+				dictionary = new KrollDict(new JSONObject(record));
+			} catch (JSONException e) {
+				e.printStackTrace();
+				Log.w(TAG, "Unable to parse dictionary.");
+			}
+			result[index++] = dictionary;
+		}
+		return result;
+	}
+
+	public boolean isNull(String key)
+	{
 		return (get(key) == null);
 	}
-	
+
 	@Override
-	public String toString() {
+	public String toString()
+	{
 		return new JSONObject(this).toString();
 	}
 }
